feat: add shippment module and add logout feature
