# core/urls.py
@@ -53,5 +53,5 @@ urlpatterns = [
     path('api/v1/orders/', include('orders.urls')),
     path('api/v1/products/', include('products.urls')),
     path('api/v1/payments/', include('payments.urls')),
-
+    path('api/v1/shipments/', include('shipments.urls')),
 ] + static(settings.STATIC_URL, document_root=settings.STATIC_ROOT)
